--- a/Mis_solicitudes/index.css
+++ b/Mis_solicitudes/index.css
@@ -114,7 +114,8 @@
 }
 table
 {
-   width: 100%;
+    background-color: red;
+   width: 95%;
    font-size: 150%;
    font-family: 'Times New Roman', Times, serif;
 }
@@ -145,7 +146,7 @@ tbody > tr {
     height:10% ;
     left: 42%;
 }
-tbody > input
+tbody > th
 {
-    
+ display: block;   
 }
