--- a/Mis_solicitudes/nueva_solicitud/index.css
+++ b/Mis_solicitudes/nueva_solicitud/index.css
@@ -42,5 +42,5 @@ textarea
     height: 60%;
     left: 20%;
     resize: none;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
+    box-shadow: none;
 }
