--- a/usuarios/index.css
+++ b/usuarios/index.css
@@ -96,7 +96,7 @@
 {
     background: #FF6C6C;
 }
-.tablaSolicitudes
+.tablaUsuarios
 {
     margin-left: 1%;
     top: 38%;
@@ -108,7 +108,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 }
-.tablaSolicitudes > img
+.tablaUsuarios > img
 {
     position: absolute;
     width: 30%;
@@ -195,7 +195,7 @@ tbody > tr {
 #textoNuevoUsuario
 {
     position: relative;
-    width: 60%;
+    width: 62%;
     height: 60%;
     left: 20%;
     top: 2%;
@@ -203,21 +203,12 @@ tbody > tr {
     box-shadow: none;
     
 }
-h4,h2,h3{
-    display: inline-block;
-}
-h4{
-    position: relative;
-    left: 20%;
-    font-size: 120%;
-}
-h2, h3{
-    left: 40%;
-    position: relative;
-}
 h2{
-    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 #enviarUsuario
 {
     position: absolute;
@@ -236,7 +227,7 @@ h2{
     font-size: 24px;
     line-height: 28px;
 }
-#enviarSolicitud:hover
+#enviarUsuario:hover
 {
     transition: 2s;
     background: orangered;
